Fix Using Mutable Sets as Constants
Moving these constants to immutable sets to make the code more obviously
safe and also for a slight speedup here and there.